syntax = "proto3";
package training;
option go_package = "./;pb";

import "booking.proto";

service FPTCustomer {
    rpc CreateCustomer(Customer) returns (Customer);
    rpc UpdateCustomer(Customer) returns (Customer);
    rpc ChangePassword(Customer) returns (Customer);
    rpc FindCustomer(FindCustomerRequest) returns (Customer);
    rpc BookingHistory(BookingHistoryRequest) returns (ViewBookingByIDResponse);
}

message Customer {
    string id = 1;
    string name = 2;
    string address = 3;
    string license_id = 4;
    string phone_number = 5;
    string email = 6;
    string password = 7;
    bool active = 8;
}
message  FindCustomerRequest {
    string id = 1;
    string name = 2;
}
message BookingHistoryRequest {
    string id = 1;
}